--- a/README.Rmd
+++ b/README.Rmd
@@ -85,10 +85,10 @@ Occasionally you may want to produce a series of clockPlots, for example if you 
 Notes:
 * All clockPlots will have the same options
 * You must specify the name of the column inside the tibble
-  + This is using the *column* argument
+  * This is using the *column* argument
 * clockPlots are added to the *clockPlots* column at the front of the tibble parsed
 * View clockPlot using clockPlots[[column]][[row]]
-  + column will be 1 by default
+  * column will be 1 by default
 
 ```{r}
 #Produce clockPlots from a tibble
