--- a/README.Rmd
+++ b/README.Rmd
@@ -89,7 +89,7 @@ Notes:
 * clockPlots are added to the *clockPlots* column at the front of the tibble parsed
 * View clockPlot using clockPlots[[column]][[row]]
   * column will be 1 by default
-
+People
 ```{r}
 #Produce clockPlots from a tibble
 
