Fixed 12 hourly bug

--- a/README.Rmd
+++ b/README.Rmd
@@ -64,7 +64,7 @@ clockPlot allows for various means of customisation:
 Here a few examples with varying options (not an exhaustive list of option combinations)
 
 ```{r}
-#Produce clockPlot's with differrent views
+#Produce clockPlot's with different views
 
 #Assign a time in the POSIX format to a value. The date is required in POSIX but is ignored in a clockPlot
 someTimeValue <- Sys.time()
